syntax = "proto3";
option go_package = "grpc-golang/user";
package user;

message Response {
  int64 code = 1;
  string message = 2;
}

message UserModel {
  int64 id = 1;
  string name = 2;
  string number = 3;
}

message CreateUserRequest {
  UserModel user = 1;
}

message CreateUserResponse {
  UserModel user = 1;
  Response res = 2;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  Response res = 1;
}

message GetByIdUserRequest {
  int64 id = 1;
}

message GetByIdUserResponse {
  UserModel user = 1;
  Response res = 2;
}

service User {
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetById(GetByIdUserRequest) returns (GetByIdUserResponse);
}
